# pattern-creator

./: .gitignore  README.md  frontLaterMeasurements.csv  front_outline.csv  profile_outline.csv  pyproject.toml
src/: __init__.py  bezier_curve.py  bodice_block.py  main.py
