[tool.poetry]
name = "pattern-creator"
version = "0.1.0"
description = "A Python project for creating patterns"
authors = ["Sezal Jain"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
